# Milkv-duo_Cross_Compile_software

./: README.md
OpenCV/: README.md
OpenCV/install_cv1800b/lib/: libopencv_calib3d.so.4.5  libopencv_calib3d.so.4.5.4  libopencv_core.so.4.5  libopencv_core.so.4.5.4  libopencv_dnn.so.4.5  libopencv_features2d.so.4.5  libopencv_features2d.so.4.5.4  libopencv_flann.so.4.5  libopencv_flann.so.4.5.4  libopencv_gapi.so.4.5  libopencv_gapi.so.4.5.4  libopencv_imgcodecs.so.4.5  libopencv_imgcodecs.so.4.5.4  libopencv_imgproc.so.4.5  libopencv_ml.so.4.5  libopencv_ml.so.4.5.4  libopencv_objdetect.so.4.5  libopencv_objdetect.so.4.5.4  libopencv_photo.so.4.5  libopencv_photo.so.4.5.4  libopencv_stitching.so.4.5  libopencv_stitching.so.4.5.4  libopencv_video.so.4.5  libopencv_video.so.4.5.4  libopencv_videoio.so.4.5  libopencv_videoio.so.4.5.4
OpenCV/opencv_demo_src/: .led_blink.c.swp  CMakeLists.txt  how_to_build_demo.txt  main.cpp
SQLIte3/: README.md
SQLIte3/install_cv1800b/lib/: libsqlite3.la
SQLIte3/install_cv1800b/lib/pkgconfig/: sqlite3.pc
cJSON/install_cv1800b/lib/: libcjson.so.1.7.15  libcjson_utils.so.1  libcjson_utils.so.1.7.15
libev/: README.md
libev/install_cv1800b/lib/: libev.la  libev.so.4.0.0
mosquitto/: README.md
mosquitto/configfile/: aclfile  mosquitto.conf
mosquitto/cv1800b/lib/: libmosquitto.so.2.0.15  libmosquittopp.so.2.0.15
mosquitto/cv1800b/sbin/: mosquitto
openssl/install_cv1800b/lib/: libcrypto.so.1.1  libssl.so.1.1
rtty/: README.md
thttpd/install_cv1800b/etc/: thttpd.conf
tree/: tree
(+559 files in other folders)
